flux/clusters/meruto/apps/misskey/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: misskey-egress-db-valkey-only
  namespace: misskey
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: misskey
      app.kubernetes.io/instance: misskey
  egress:
  - toServices:
    - k8sService:
        namespace: misskey
        serviceName: misskey-cluster-rw
    toPorts:
    - ports:
      - port: "5432"
        protocol: TCP
  - toServices:
    - k8sService:
        namespace: misskey
        serviceName: misskey-valkey
    toPorts:
    - ports:
      - port: "6379"
        protocol: TCP
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      - port: "53"
        protocol: TCP
